# paygo

./: .gitignore  NOTES.md  README.md  TODO.md  go.mod  main.go
backend/: README.md  go.mod
backend/auth/: Cargo.toml  build.rs
backend/auth/src/: auth.rs  main.rs  proto.rs
backend/checkout/: .gitignore  build.sh  charge.go  go.mod  go.sum  main.go  payment.go  payment_method.go  router.go
backend/checkout/api/: charge.go  common.go  error.go  handlers.go  payment.go  payment_method.go  router.go
backend/checkout/app/: checkout.go  router.go
backend/checkout/lib/: charge.go  common.go  middleware.go  payment.go  payment_method.go
backend/common/data/: card.go
backend/common/db/: payment.go
backend/common/handlers/: payment.go
backend/payments/: go.mod
backend/payments/bank/: client.go
backend/payments/common/data/: payment.go
backend/payments/common/db/: payment.go
backend/payments/common/handlers/: payment.go
backend/payments/payment/: main.go
backend/proto/: auth.proto  payment.proto
db/: payment.go
frontend/: README.md
frontend/paygo/: package.json  tailwind.config.js
frontend/paygo/public/: index.html
frontend/paygo/src/: App.js  App.tsx  CardForm.js  CardForm.tsx  Checkout.tsx  index.css
frontend/paygo/src/card/: CardForm.tsx  CardInput.tsx
frontend/paygo/src/components/: CardForm.tsx  Checkout.tsx  ProgressButton.tsx
handlers/: payment.go
lib/: types.go
web/: README.md
